--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "psuti-bets-backend",
-  "version": "0.0.1",
+  "version": "0.1.1",
   "description": "",
-  "author": "",
+  "author": ".im",
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
@@ -23,6 +23,8 @@
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/swagger": "^7.1.17",
+    "dotenv": "^16.3.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
   },
