--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "psuti-bets-backend",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "description": "",
   "author": ".im",
   "private": true,
@@ -22,9 +22,11 @@
   "dependencies": {
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/mongoose": "^10.0.2",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^7.1.17",
     "dotenv": "^16.3.1",
+    "mongoose": "^8.0.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
   },
