--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "psuti-bets-backend",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "",
   "author": ".im",
   "private": true,
@@ -25,6 +25,8 @@
     "@nestjs/mongoose": "^10.0.2",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^7.1.17",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
     "dotenv": "^16.3.1",
     "mongoose": "^8.0.3",
     "reflect-metadata": "^0.1.13",
